* ext/openssl/ossl_ssl.c (ssl_npn_encode_protocol_i): fix byte order   issue on big-endian architecture [ruby-core:50292] [Bug #7463]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37996 b2dd03c8-39d4-4d8f-98ff-823fe69b080e